--- a/insaerospace/main/templates/main/base.html
+++ b/insaerospace/main/templates/main/base.html
@@ -3,57 +3,74 @@
 <!DOCTYPE html>
 
 <html lang="fr-FR">
-    <head>
-        <meta charset="utf-8">
-        
-        <title>{% block title %}{% endblock %} | {{ site_name }}</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="{% static 'main/base.css' %}">
-        <link rel="shortcut icon" href="{{ favicon }}" type="image/svg+xml">
-        <link rel="icon" href="{{ favicon }}" type="image/svg+xml">
 
-        <!-- icons -->
-        <script src="https://kit.fontawesome.com/51918b7d55.js" crossorigin="anonymous"></script>
+<head>
+    <meta charset="utf-8">
 
-        <!-- header script -->
-         <script src="{% static 'main/scripts/header.js' %}"></script>
-        {% block extrahead %}
-        {% endblock %}
-    </head>
+    <title>{% block title %}{% endblock %} | {{ site_name }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{% static 'main/base.css' %}">
+    <link rel="shortcut icon" href="{{ favicon }}" type="image/svg+xml">
+    <link rel="icon" href="{{ favicon }}" type="image/svg+xml">
 
-    <body>
-        <header>
-            <div id="header-site-name">
-                <img src="{% static '/images/logo/logo-insaerospace.svg' %}" alt="Logo INSAerospace">
-                <a href="/"><span class="logo-red-part">INSA</span>erospace</a>
-            </div>
-            <nav id="nav-menu" class="">
-                <ul>
-                    <a href="{% url 'nos-projets' %}"><i class="fa-solid fa-caret-right mobile-only"></i> Nos Projets</a>
-                    <a href="{% url 'nos-membres'%}"><i class="fa-solid fa-caret-right mobile-only"></i> La team</a>
-                    <a href="{% url 'contact'%}"><i class="fa-solid fa-caret-right mobile-only"></i> Nous contacter</a>
-                </ul>
-            </nav>
-            <div id="hamburger-button" class="mobile-only" onclick="toggleNavMenu()" tabindex="0"><i class="fa-solid fa-bars" ></i></div>
-        </header>
+    <!-- icons -->
+    <script src="https://kit.fontawesome.com/51918b7d55.js" crossorigin="anonymous"></script>
 
-        <main>
+    <!-- header script -->
+    <script src="{% static 'main/scripts/header.js' %}"></script>
+    {% block extrahead %}
+    {% endblock %}
+</head>
+
+<body>
+    <header>
+        <div id="header-site-name">
+            <img src="{% static '/images/logo/logo-insaerospace.svg' %}" alt="Logo INSAerospace">
+            <a href="/"><span class="logo-red-part">INSA</span>erospace</a>
+        </div>
+        <nav id="nav-menu" class="">
+            <ul>
+                <a href="{% url 'nos-projets' %}"><i class="fa-solid fa-caret-right mobile-only"></i> Nos Projets</a>
+                <a href="{% url 'nos-membres'%}"><i class="fa-solid fa-caret-right mobile-only"></i> La team</a>
+                <a href="{% url 'contact'%}"><i class="fa-solid fa-caret-right mobile-only"></i> Nous contacter</a>
+            </ul>
+        </nav>
+        <div id="hamburger-button" class="mobile-only" onclick="toggleNavMenu()" tabindex="0"><i
+                class="fa-solid fa-bars"></i></div>
+    </header>
+
+    <main>
         {% block content %}
         {% endblock %}
-        </main>
+    </main>
 
-        <footer>
-            <p class="insaerospace">INSAerospace</p>
-            <div class="line"></div>
-            <div class="links">
-                <a href="{% url 'accueil' %}">Accueil</a>
-                <a href="{% url 'nos-projets' %}">Nos Projets</a>
-                <a href="{% url 'nos-membres' %}">L'équipe INSAerospace</a>
-                <a href="{% url 'contact' %}">Contact</a>
-                <a href="{% url 'contact' %}">Nos Partenaires - <b>Devenir Partenaire</b></a>
-                <a href="{% url 'contact' %}">Mentions Légales</a>
+    <footer>
+        <div class="footer-flex">
+            <div class="footer-data">
+                <p class="insaerospace">INSAerospace</p>
+                <div class="line"></div>
+                <div class="links">
+                    <a href="{% url 'accueil' %}">Accueil</a>
+                    <a href="{% url 'nos-projets' %}">Nos Projets</a>
+                    <a href="{% url 'nos-membres' %}">L'équipe INSAerospace</a>
+                    <a href="{% url 'contact' %}">Contact</a>
+                    <a href="{% url 'contact' %}">Nos Partenaires - <b>Devenir Partenaire</b></a>
+                    <a href="{% url 'contact' %}">Mentions Légales</a>
+                </div>
             </div>
-            <p class="insash">Tous droits réservés - © INSAerospace 2024 - Site réalisé avec ❤️ par <a href="https://insash.org" target="_blank">./insa.sh, le Club Info de l’INSA Hauts-de-France</a></p>
-        </footer>
-    </body>
+            <div class="footer-sponsors">
+                    <a href="https://insa-hautsdefrance.fr/" target="_blank">
+                        <img src="{% static 'images/sponsors/logo-insahdf-white.png' %}" alt="Logo INSA Hauts-de-France">
+                    </a>
+                    <a href="https://uphf.fr/" target="_blank">
+                        <img src="{% static 'images/sponsors/logo-uphf-white.png' %}" alt="Logo UPHF">
+                    </a>
+            </div>
+
+        </div>
+        <p class="insash">Tous droits réservés - © INSAerospace 2024 - Site réalisé avec ❤️ par <a
+                href="https://insash.org" target="_blank">./insa.sh, le Club Info de l’INSA Hauts-de-France</a></p>
+    </footer>
+</body>
+
 </html>
