--- a/insaerospace/main/templates/main/accueil.html
+++ b/insaerospace/main/templates/main/accueil.html
@@ -104,14 +104,19 @@
         <div class="flex">
             <div>
                 <p>
-                    L'un de nos principaux objectifs est de <strong>participer au C'Space</strong>, la campagne nationale de lancement de
-                    fusées organisée par le CNES (Centre national d'études spatiales). Cet événement, qui se tient chaque année,
-                    est l'occasion pour des étudiants de toute la France de tester et mettre en avant leurs projets dans un environnement sécurisé.
+                    L'un de nos principaux objectifs est de <strong>participer au C'Space</strong>, la campagne
+                    nationale de lancement de
+                    fusées organisée par le CNES (Centre national d'études spatiales). Cet événement, qui se tient
+                    chaque année,
+                    est l'occasion pour des étudiants de toute la France de tester et mettre en avant leurs projets dans
+                    un environnement sécurisé.
                 </p>
                 <p>
-                    Tous nos projets sont réalisés de manière <strong>autodidacte</strong>, avec l'aide de membres expérimentés.
+                    Tous nos projets sont réalisés de manière <strong>autodidacte</strong>, avec l'aide de membres
+                    expérimentés.
                     L'objectif est
-                    donc aussi de <strong>permettre à chacun de développer des compétences approfondies en aérospatiale</strong>, utiles
+                    donc aussi de <strong>permettre à chacun de développer des compétences approfondies en
+                        aérospatiale</strong>, utiles
                     aussi bien pour le CV, en entreprise que pour les études.
                 </p>
             </div>
@@ -122,7 +127,8 @@
 
         <h2>Pour qui ?</h2>
         <p>
-            L'association est <strong>ouverte à tous les étudiants de l'Université Polytechnique Hauts-de-France (UPHF)</strong>, motivés
+            L'association est <strong>ouverte à tous les étudiants de l'Université Polytechnique Hauts-de-France
+                (UPHF)</strong>, motivés
             et passionnés par l'aérospatiale, quel que soit leur niveau. Nous accueillons également des étudiants
             intéressés par la mécanique et l'électronique. Notre équipe est là pour accompagner chaque membre dans la
             réalisation de leurs projets.
@@ -130,23 +136,38 @@
 
         <h2>Quand se retrouver ?</h2>
         <div class="flex" id="socials">
-            <a href="https://instagram.com/insaerospace" target="_blank" title="Aller sur notre page Instagram"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://instagram.com/insaerospace" target="_blank" title="Aller sur notre page Instagram"><i
+                    class="fa-brands fa-instagram"></i></a>
             <!-- <a href="http://facebook.com/insaerospace" target="_blank"><i class="fa-brands fa-facebook"></i></a> -->
-            <a href="https://www.linkedin.com/company/insaerospace" target="_blank" title ="Aller sur notre page LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/company/insaerospace" target="_blank"
+                title="Aller sur notre page LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
             <!-- <a href="http://youtube.com/insaerospace" target="_blank"><i class="fa-brands fa-youtube"></i></a> -->
         </div>
 
         <p>
-            Nos séances se tiennent le <strong>jeudi après-midi</strong>, généralement en salle de travaux pratiques (selon
-            disponibilités). <strong>Aucune obligation</strong>. INSAerospace ne vous impose rien, cela doit être un loisir pour vous.
+            Nos séances se tiennent le <strong>jeudi après-midi</strong>, généralement en salle de travaux pratiques
+            (selon
+            disponibilités). <strong>Aucune obligation</strong>. INSAerospace ne vous impose rien, cela doit être un
+            loisir pour vous.
         </p>
 
         <h2>Matériel nécessaire ?</h2>
         <p>
-            <strong>Aucun matériel spécifique n'est requis</strong> : des ordinateurs et de l’équipement sont disponibles en salle de TP,
+            <strong>Aucun matériel spécifique n'est requis</strong> : des ordinateurs et de l’équipement sont
+            disponibles en salle de TP,
             mais vous pouvez aussi utiliser votre propre matériel. Les licences étudiantes sont offertes grâce à l'INSA.
         </p>
+        <h2 id="sponsors">Nos sponsors</h2>
+        <div class="list-sponsors">
+            <a href="https://insa-hautsdefrance.fr/" target="_blank">
+                <img src="{% static 'images/sponsors/logo-insahdf-white.png' %}" alt="Logo INSA Hauts-de-France">
+            </a>
+            <a href="https://uphf.fr/" target="_blank">
+                <img src="{% static 'images/sponsors/logo-uphf-white.png' %}" alt="Logo UPHF">
+            </a>
+        </div>
     </div>
+
 </section>
 
 <script src="{% static 'main/scripts/accueil.js' %}"></script>
